--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<link href="lingo.css" type="text/css" rel="stylesheet">
+	<title>Lingo</title>
 </head>
 <body>
+	<button onclick="test()">Try it</button>
+	<div class="vr4">&nbsp;</div>
+	<div id="een">
+	<p style="border: 1px inset"></p>
+	<p>poging 1</p>	
+	</div>
+	<div class="vr">&nbsp;</div>
+	<div id="twee">
+	<p style="border: 1px inset"></p>
+	<p>poging 2</p>	
+	</div>
+	<div class="vr2">&nbsp;</div>
+	<div id="drie">
+	<p style="border: 1px inset"></p>
+	<p>poging 3</p>	
+	</div>
+	<div class="vr3">&nbsp;</div>
+	<div id="vier">
+	<p style="border: 1px inset"></p>
+	<p>poging 4</p>	
+	</div>
+	<div class="vr5">&nbsp;</div>
+	<div id="vijf">
+	<p style="border: 1px inset"></p>
+	<p>poging 5</p>	
+	</div>
 
+	<p id="test"></p>
+
+
+	<script src="lingojava.js" type="text/javascript" ></script>
+	<script src="lingo-nl.js" type="text/javascript" ></script>
 </body>
 </html>
