met input aan het testen/experimenteren

--- a/index.html
+++ b/index.html
@@ -6,33 +6,14 @@
 	<title>Lingo</title>
 </head>
 <body>
-	<button onclick="test()">Try it</button>
-	<div class="vr4">&nbsp;</div>
-	<div id="een">
-	<p style="border: 1px inset"></p>
-	<p>poging 1</p>	
-	</div>
-	<div class="vr">&nbsp;</div>
-	<div id="twee">
-	<p style="border: 1px inset"></p>
-	<p>poging 2</p>	
-	</div>
-	<div class="vr2">&nbsp;</div>
-	<div id="drie">
-	<p style="border: 1px inset"></p>
-	<p>poging 3</p>	
-	</div>
-	<div class="vr3">&nbsp;</div>
-	<div id="vier">
-	<p style="border: 1px inset"></p>
-	<p>poging 4</p>	
-	</div>
-	<div class="vr5">&nbsp;</div>
-	<div id="vijf">
-	<p style="border: 1px inset"></p>
-	<p>poging 5</p>	
-	</div>
+	
 
+	poging 1: <input id="poging1" type="text" name="resultaat" size="50"><br>
+	poging 2: <input id="poging2" type="text" name="fname" size="50"><br>
+	poging 3: <input id="poging3" type="text" name="fname" size="50"><br>
+	poging 4: <input id="poging4" type="text" name="fname" size="50"><br>
+	poging 5: <input id="poging5" type="text" name="fname" size="50"><br>
+	<button onclick="test()">Try it</button>
 	<p id="test"></p>
 
 
