buttons erbij gedaan en vakken. bezig met woorden er in laden.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,47 @@
 	<title>Lingo</title>
 </head>
 <body>
-	
-
-	poging 1: <input id="poging1" type="text" name="resultaat" size="50"><br>
-	poging 2: <input id="poging2" type="text" name="fname" size="50"><br>
-	poging 3: <input id="poging3" type="text" name="fname" size="50"><br>
-	poging 4: <input id="poging4" type="text" name="fname" size="50"><br>
-	poging 5: <input id="poging5" type="text" name="fname" size="50"><br>
-	<button onclick="test()">Try it</button>
-	<p id="test"></p>
+	<main>
+		<button id="start">Start spel</button>
+		<button id="controleren">Woord controleren</button>
+		<div id="rows">
+			<article id="row1">
+				<input type="text" maxlength="1" id="1" class="raster">
+				<input type="text" maxlength="1" id="2" class="raster">
+				<input type="text" maxlength="1" id="3" class="raster">
+				<input type="text" maxlength="1" id="4" class="raster">
+				<input type="text" maxlength="1" id="5" class="raster">
+			</article>
+			<article id="row2">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+			</article>
+			<article id="row3">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+			</article>
+			<article id="row4">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+			</article>
+			<article id="row5">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="">
+			</article>
+		</div>
+	</main>	
 
 
 	<script src="lingojava.js" type="text/javascript" ></script>
