--- a/test.html
+++ b/test.html
@@ -23,3 +23,11 @@
 	<p style="border: 1px inset"></p>
 	<p>poging 5</p>	
 	</div>
+
+	poging 1: <input id="poging1" type="text" name="resultaat" size="50"><br>
+	poging 2: <input id="poging2" type="text" name="fname" size="50"><br>
+	poging 3: <input id="poging3" type="text" name="fname" size="50"><br>
+	poging 4: <input id="poging4" type="text" name="fname" size="50"><br>
+	poging 5: <input id="poging5" type="text" name="fname" size="50"><br>
+	<button onclick="test()">Try it</button>
+	<p id="test"></p>
