--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
 		<button id="controleren">Woord controleren</button>
 		<div id="rows">
 			<article id="row1">
-				<input type="text" maxlength="1" id="1" class="raster">
-				<input type="text" maxlength="1" id="2" class="raster">
-				<input type="text" maxlength="1" id="3" class="raster">
-				<input type="text" maxlength="1" id="4" class="raster">
-				<input type="text" maxlength="1" id="5" class="raster">
+				<input type="text" maxlength="1" id="1_1" class="raster">
+				<input type="text" maxlength="1" id="1_2" class="raster">
+				<input type="text" maxlength="1" id="1_3" class="raster">
+				<input type="text" maxlength="1" id="1_4" class="raster">
+				<input type="text" maxlength="1" id="1_5" class="raster">
 			</article>
 			<article id="row2">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="6" class="raster">
+				<input type="text" maxlength="1" id="7" class="raster">
+				<input type="text" maxlength="1" id="8" class="raster">
+				<input type="text" maxlength="1" id="9" class="raster">
+				<input type="text" maxlength="1" id="10" class="raster">
 			</article>
 			<article id="row3">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
 			</article>
 			<article id="row4">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
 			</article>
 			<article id="row5">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
-				<input type="text" maxlength="1" id="">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
+				<input type="text" maxlength="1" id="" class="raster">
 			</article>
 		</div>
 	</main>	
