doen morgen: uitzoeken hoe je controleren of een letter voorkomt in een streng.

--- a/test.html
+++ b/test.html
@@ -31,3 +31,6 @@
 	poging 5: <input id="poging5" type="text" name="fname" size="50"><br>
 	<button onclick="test()">Try it</button>
 	<p id="test"></p>
+
+	//woord goed en dan wordt er een nieuw woord gekozen.//
+	//woord controleren, en letters versplaatsen
