bezig met reset en opnieuw spelen.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<main>
 		<button id="start">Start spel</button>
 		<button id="controleren">Woord controleren</button>
+		<button id="opnieuw">Opnieuw spelen</button>
 		<div id="rows">
 			<article id="row1">
 				<input type="text" maxlength="1" id="0_0" class="raster">
