reset,game over doet het.

--- a/index.html
+++ b/index.html
@@ -10,43 +10,45 @@
 		<button id="start">Start spel</button>
 		<button id="controleren">Woord controleren</button>
 		<button id="opnieuw">Opnieuw spelen</button>
-		<div id="rows">
-			<article id="row1">
-				<input type="text" maxlength="1" id="0_0" class="raster">
-				<input type="text" maxlength="1" id="0_1" class="raster">
-				<input type="text" maxlength="1" id="0_2" class="raster">
-				<input type="text" maxlength="1" id="0_3" class="raster">
-				<input type="text" maxlength="1" id="0_4" class="raster">
-			</article>
-			<article id="row2">
-				<input type="text" maxlength="1" id="1_0" class="raster">
-				<input type="text" maxlength="1" id="1_1" class="raster">
-				<input type="text" maxlength="1" id="1_2" class="raster">
-				<input type="text" maxlength="1" id="1_3" class="raster">
-				<input type="text" maxlength="1" id="1_4" class="raster">
-			</article>
-			<article id="row3">
-				<input type="text" maxlength="1" id="2_0" class="raster">
-				<input type="text" maxlength="1" id="2_1" class="raster">
-				<input type="text" maxlength="1" id="2_2" class="raster">
-				<input type="text" maxlength="1" id="2_3" class="raster">
-				<input type="text" maxlength="1" id="2_4" class="raster">
-			</article>
-			<article id="row4">
-				<input type="text" maxlength="1" id="3_0" class="raster">
-				<input type="text" maxlength="1" id="3_1" class="raster">
-				<input type="text" maxlength="1" id="3_2" class="raster">
-				<input type="text" maxlength="1" id="3_3" class="raster">
-				<input type="text" maxlength="1" id="3_4" class="raster">
-			</article>
-			<article id="row5">
-				<input type="text" maxlength="1" id="4_0" class="raster">
-				<input type="text" maxlength="1" id="4_1" class="raster">
-				<input type="text" maxlength="1" id="4_2" class="raster">
-				<input type="text" maxlength="1" id="4_3" class="raster">
-				<input type="text" maxlength="1" id="4_4" class="raster">
-			</article>
-		</div>
+		<form id="rijen">
+			<div id="rows">
+				<article id="row1">
+					<input type="text" maxlength="1" id="0_0" class="raster">
+					<input type="text" maxlength="1" id="0_1" class="raster">
+					<input type="text" maxlength="1" id="0_2" class="raster">
+					<input type="text" maxlength="1" id="0_3" class="raster">
+					<input type="text" maxlength="1" id="0_4" class="raster">
+				</article>
+				<article id="row2">
+					<input type="text" maxlength="1" id="1_0" class="raster">
+					<input type="text" maxlength="1" id="1_1" class="raster">
+					<input type="text" maxlength="1" id="1_2" class="raster">
+					<input type="text" maxlength="1" id="1_3" class="raster">
+					<input type="text" maxlength="1" id="1_4" class="raster">
+				</article>
+				<article id="row3">
+					<input type="text" maxlength="1" id="2_0" class="raster">
+					<input type="text" maxlength="1" id="2_1" class="raster">
+					<input type="text" maxlength="1" id="2_2" class="raster">
+					<input type="text" maxlength="1" id="2_3" class="raster">
+					<input type="text" maxlength="1" id="2_4" class="raster">
+				</article>
+				<article id="row4">
+					<input type="text" maxlength="1" id="3_0" class="raster">
+					<input type="text" maxlength="1" id="3_1" class="raster">
+					<input type="text" maxlength="1" id="3_2" class="raster">
+					<input type="text" maxlength="1" id="3_3" class="raster">
+					<input type="text" maxlength="1" id="3_4" class="raster">
+				</article>
+				<article id="row5">
+					<input type="text" maxlength="1" id="4_0" class="raster">
+					<input type="text" maxlength="1" id="4_1" class="raster">
+					<input type="text" maxlength="1" id="4_2" class="raster">
+					<input type="text" maxlength="1" id="4_3" class="raster">
+					<input type="text" maxlength="1" id="4_4" class="raster">
+				</article>
+			</div>
+		</form>
 	</main>	
 
 
