--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<button id="start">Start spel</button>
 		<button id="controleren">Woord controleren</button>
 		<button id="opnieuw">Opnieuw spelen</button>
+		<button id="nieuwwoord">Nieuw woord</button>
 		<form id="rijen">
 			<div id="rows">
 				<article id="row1">
